Color fixes for contrast ratios, and so textarea label doesn't look like a link.
git-svn-id: https://digressit.googlecode.com/svn/trunk@409 b80beb6a-a484-11de-b98f-4500b42dc123

--- a/core/css/core.css
+++ b/core/css/core.css
@@ -983,6 +983,7 @@ ul{
 
 #comment-label {
     font-size: .9em;
+    color: #474747;
 }
 
 .comment-collapsed{
